# rag-eval-lab

./: .gitignore  pyproject.toml
app/: app.py
data/eval/: eval_outputs_day8.jsonl  eval_questions.jsonl
eval/: gold_v1.jsonl
eval/outputs/: day10_outputs.jsonl
notes/: day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md
reports/: eval_summary.json
sql/: daily.sql
src/: bq_load_eval_outputs_day10.py  bq_log_event.py  bq_log_event_v2.py  bq_query_metrics.py  bq_smoke_test.py  bq_upload_docs_short.py  chunk_short.py  duckdb_parquet_demo.py  embed_index_short.py  eval_experiment_day10.py  eval_run.py  eval_run_day8.py  ingest_short.py  inspect_jsonl.py  rag_answer_local.py  rag_retrieve.py  regression_check.py  retrieve_short_demo.py
